[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/unit/rangers/bomber/bomber.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
hp = 1000
dmg_from_fire = 10
strenght = 1000

[node name="start_of_the_bomb" type="Area2D" parent="."]
position = Vector2( 64, 0 )
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.75, 1.09375 )
texture = ExtResource( 2 )

[node name="range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="hp" type="TextEdit" parent="."]
margin_left = -16.0
margin_top = -96.0
margin_right = 24.0
margin_bottom = -56.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
